--- a/src/pug/homepage.pug
+++ b/src/pug/homepage.pug
@@ -26,7 +26,9 @@ body
         header.header
             h1 Hello it's my workflow update 3
             | <br>  Нас много 242
+            
 
+            a(href="http://farm4.staticflickr.com/3721/9207329484_ba28755ec4_o.jpg" data-mfp) Test
             .owl-carousel
                 div 1
                 div 2
