--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -22,6 +22,12 @@ body {
 	padding: 40rem;
 	border-radius: 3px;
 	box-shadow: 0 1px 10px rgba(0,0,0,0.1);
+	transition: 0.4s;
+	opacity: 0;
+}
+
+.is-load .app {
+	opacity: 1;
 }
 
 .app-heading {
