--- a/src/pug/homepage.pug
+++ b/src/pug/homepage.pug
@@ -27,12 +27,24 @@ body
         
         header.header
             h1 Hello it's my workflow update 4
+
+            span.icon-info-beach
+
+            span.icon-info-children
+
+            span.icon-info-health
+
+            span.icon-info-party
+
+
+
+            input(type="text" placeholder="" readonly).app-input.js-datepicker
             
 
             p
                 a(href="http://farm4.staticflickr.com/3721/9207329484_ba28755ec4_o.jpg" data-mfp) Test
             
-            .js-scroll(style="height: 200px; overflow: auto; margin: 0 0 20px;")
+            .js-scroll(style="height: 200px;max-height: 200px;margin: 0 0 20px;")
                 p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum cupiditate deserunt accusamus consequuntur vitae, assumenda labore dicta obcaecati eligendi dignissimos magni quam, voluptatibus excepturi voluptas, natus nesciunt voluptatem. Deserunt, soluta.
                 p Facilis, cum fuga a doloremque. Quae odit, mollitia perspiciatis. Dolore porro, aliquid quidem fuga est, hic libero quia eligendi inventore odio quibusdam quos consectetur quo commodi atque tenetur accusantium. Obcaecati!
                 p Tempore sunt est autem, fuga totam quidem nobis saepe, voluptatem illo beatae aliquam similique repudiandae, maxime illum alias, accusantium! Magnam, cupiditate exercitationem iusto sunt repellat non aperiam, quidem illo quas.
