--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -22,6 +22,11 @@
 @import 'base/_typography';
 @import 'base/_icons';
 
+@import 'base/_datepicker';
+@import 'base/_mfp';
+// @import 'base/_scrollbar';
+@import 'base/_slick';
+
 @import 'base/_forms';
 @import 'base/_buttons';
 @import 'base/_lists';
