--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -1,3 +1,8 @@
 // --------------------------------------------------------------------------
 // Icons
 // --------------------------------------------------------------------------
+
+[class^="icon-"], [class*=" icon-"] {
+	fill: currentColor;
+}
+	
