--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -24,7 +24,7 @@
 
 @import 'base/_datepicker';
 @import 'base/_mfp';
-// @import 'base/_scrollbar';
+@import 'base/_scrollbar';
 @import 'base/_slick';
 
 @import 'base/_forms';
