--- a/src/sprites/_spritesSvg.scss
+++ b/src/sprites/_spritesSvg.scss
@@ -5,6 +5,36 @@
 // 	fill: currentColor;
 // }
 
+.categories-1 {
+	display: inline-block;
+	vertical-align: middle;
+	width: 185.35px;
+	height: 82.08px;
+}
+.categories-2 {
+	display: inline-block;
+	vertical-align: middle;
+	width: 144.58px;
+	height: 125.87px;
+}
+.categories-3 {
+	display: inline-block;
+	vertical-align: middle;
+	width: 128.88px;
+	height: 117.7px;
+}
+.categories-4 {
+	display: inline-block;
+	vertical-align: middle;
+	width: 100.15px;
+	height: 138.56px;
+}
+.categories-5 {
+	display: inline-block;
+	vertical-align: middle;
+	width: 160.93px;
+	height: 133.62px;
+}
 .icon-category-10 {
 	display: inline-block;
 	vertical-align: middle;
