--- a/src/pug/homepage.pug
+++ b/src/pug/homepage.pug
@@ -36,6 +36,8 @@ body
 
             span.icon-info-party
 
+            +sprite('categories-1')
+
 
 
             input(type="text" placeholder="" readonly).app-input.js-datepicker
@@ -75,6 +77,14 @@ body
 
 
                     select(name="").app-select
+                        option 1
+                        option 2
+                        option 3
+                        option 4
+                        option 1
+                        option 2
+                        option 3
+                        option 4
                         option 1
                         option 2
                         option 3
