--- a/src/pug/homepage.pug
+++ b/src/pug/homepage.pug
@@ -116,8 +116,9 @@ body
 
         footer.footer
 
-
+    
     script(src="js/app.min.js")
+    //- script(src="https://jonathantneal.github.io/svg4everybody/svg4everybody.min.js")
     script(src="http://maps.google.com/maps/api/js?key=AIzaSyD5oswumLUaPeyYKa0zpFR7gNsobVkS7eI")
     script.
         function initMap() {
